2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs: Fix a NRE caused by r85427 because RadioButton
	and CheckBox share some code.

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* TrackBar.cs: Only call OnScroll if we actually changed the Value of
	the TrackBar, not every mouse move.  [Fixed bug #82718]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs: Allow a CheckBox to be rendered like a Button
	under 2.0 rendering.  [Fixes bug #82657]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: If we found a TreeNode to display a context menu, but
	it doesn't have one to show, let the TreeView display its menu
	instead.  [Fixes bug #82680]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripTextBox.cs: TextBox no longer call OnPaint, we need to use
	OnPaintInternal instead.  Give the internal TextBox a Border property
	so it can draw itself more correctly.  [Fixes bug #82653]

2007-09-06  Zoltan Varga  <vargaz@gmail.com>

	* HtmlHistory.cs HtmlWindow.cs HtmlWindowCollection.cs ListBindingHelper.cs WindowsFormsSection.cs WindowsFormsSynchronizationContext.cs: Stubs for missing 2.0 classes.

2007-09-05  Everaldo Canuto  <everaldo@simios.org>

	* ComboBox.cs: Adjust combobox button state to reflect current state when
	back to enabled = true. Fixes first issue of #82654.

2007-09-05  Everaldo Canuto  <everaldo@simios.org>

	* Control.cs: Fix last patch regression, prevent forms to update zorder	when
	setting visible property.

2007-09-05  Everaldo Canuto  <everaldo@simios.org>

	* Control.cs: Update zorder after control creation in SetVisibleCore, it 
	fix zorder for controls initially created as non visible. Fixes #82667.

2007-09-04  Everaldo Canuto  <everaldo@simios.org>

	* ThemeWin32Classic.cs: Adjust checkbox light color to ControlLightLight to
	mimic win32 look. Fixes #82656.

2007-09-01  Zoltan Varga  <vargaz@gmail.com>

	* FileDialogCustomPlace.cs FileDialogCustomPlacesCollection.cs: 