@@ -1,5 +1,11 @@
 2007-09-06  Jonathan Pobst  <monkey@jpobst.com>
 
+	* Control.cs: If the control is autosize, and its preferred size changes
+	when it lays out its children, tell its parent so it can be re-layed out.
+	Fixing some of the fallout from r85433.
+
+2007-09-06  Jonathan Pobst  <monkey@jpobst.com>
+
 	* ThemeWin32Classic.cs: Fix a NRE caused by r85427 because RadioButton
 	and CheckBox share some code.
 
